permit access to images